fix(chat): prevent avatar stretching

--- a/src/framework/theme/components/chat/_chat.component.theme.scss
+++ b/src/framework/theme/components/chat/_chat.component.theme.scss
@@ -95,7 +95,7 @@
       flex-shrink: 0;
       background: nb-theme(chat-message-avatar-background-color);
       background-position: center;
-      background-size: 3.4rem 2.6rem;
+      background-size: cover;
       background-repeat: no-repeat;
       width: 2.5rem;
       height: 2.5rem;
